refactor(status api): update dto for apidocs
